--- a/css_for_styling/recipe.css
+++ b/css_for_styling/recipe.css
@@ -2,4 +2,41 @@ h1, h2 {
   font-family: "Lucida Sans Unicode", Helvetica, Arial, sans-serif;
   color: #A4A400;
   background-color: #F0F0F0;
+  letter-spacing: .25em;
+  text-decoration: underline;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 22pt;
+  text-align: center;
+}
+
+h2 {
+  font-size: 18pt;
+  text-align: left;
+}
+
+body {
+  font-size: 11pt;
+  font-family: Georgia, Garamond, serif;
+  color: #404040;
+  font-size: 11px;
+  background-color: white;
+  background-image: url(silverware.jpg);
+  background-repeat: repeat-x repeat-y;
+  background-attachment: fixed;
+}
+
+a {
+  color: #A4A400;
+}
+
+blockquote {
+  background-color: #FFFFA8;
+  font-style: oblique;
+}
+
+figure {
+  margin-left: auto;
 }
