--- a/layout/tmnt.html
+++ b/layout/tmnt.html
@@ -7,14 +7,15 @@
 	</head>
 
 	<body>
-		<div>
-			<img src="banner.png" alt="Rancid Tomatoes"/>
+		<div class="banner">
+			<img id="bannerimg" src="supplement/banner.png" alt="Rancid Tomatoes"/>
 		</div>
 
-		<h1>TMNT (2007)</h1>
-
+		<h1 id="movie_title">TMNT (2007)</h1>
+<div id="content">
+	<span id="overview">
 		<div>
-			<img src="overview.png" alt="general overview"/>
+			<img src="supplement/overview.png" alt="general overview"/>
 		</div>
 
 		<dl>
@@ -57,115 +58,126 @@
 				</ul>
 			</dd>
 		</dl>
+	</span>
 
-		<div>
-			<img src="rottenbig.png" alt="Rotten" />
-			33%
+		<div id="rotten_rating">
+			<img src="supplement/rottenbig.png" alt="Rotten"/>
+			<span id="value">33%</span>
 		</div>
-
-		<p>
-			<img src="rotten.gif" alt="Rotten" />
+<div id="reviews">
+	<span id="col">
+		<p class="review">
+			<img src="supplement/rotten.gif" alt="Rotten" />
 			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
 			Peter Debruge <br />
 			Variety
 		</p>
 
-		<p>
-			<img src="fresh.gif" alt="Fresh" />
+		<p class="review">
+			<img src="supplement/fresh.gif" alt="Fresh" />
 			<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
 			Todd Gilchrist <br />
 			IGN Movies
 		</p>
 
-		<p>
-			<img src="rotten.gif" alt="Rotten" />
+		<p class="review">
+			<img src="supplement/rotten.gif" alt="Rotten" />
 			<q>It stinks!</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
 			Jay Sherman (unemployed)
 		</p>
 
-		<p>
-			<img src="rotten.gif" alt="Rotten" />
+		<p class="review">
+			<img src="supplement/rotten.gif" alt="Rotten" />
 			<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
 			Joshua Tyler <br />
 			CinemaBlend.com
 		</p>
 
-		<p>
-			<img src="rotten.gif" alt="Rotten" />
-			<q>YOUR REVIEW HERE</q>
+		<p class="review">
+			<img src="supplement/rotten.gif" alt="Rotten" />
+			<q>The instructions to this assignment were wildly unclear, and even harder to follow.</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
-			NAME <br />
-			PUBLICATION
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
+			Josiah Parry <br />
+			This Could've Been Better
 		</p>
+	</span>
 
-		<p>
-			<img src="rotten.gif" alt="Rotten" />
+	<span id="col">
+		<p class="review">
+			<img src="supplement/rotten.gif" alt="Rotten" />
 			<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
 			Jeannette Catsoulis <br />
 			New York Times
 		</p>
 
-		<p>
-			<img src="rotten.gif" alt="Rotten" />
+		<p class="review">
+			<img src="supplement/rotten.gif" alt="Rotten" />
 			<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
 			Ed Gonzalez <br />
 			Slant Magazine
 		</p>
 
-		<p>
-			<img src="fresh.gif" alt="Fresh" />
+		<p class="review">
+			<img src="supplement/fresh.gif" alt="Fresh" />
 			<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
 			Mark Palermo <br />
 			Coast (Halifax, Nova Scotia)
 		</p>
 
-		<p>
-			<img src="rotten.gif" alt="Rotten" />
+		<p class="review">
+			<img src="supplement/rotten.gif" alt="Rotten" />
 			<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
 			Steve Rhodes <br />
 			Internet Reviews
 		</p>
 
-		<p>
-			<img src="rotten.gif" alt="Rotten" />
-			<q>YOUR REVIEW HERE</q>
+		<p class="review">
+			<img src="supplement/rotten.gif" alt="Rotten" />
+			<q>I think the author might improve their content for the future.   </q>
 		</p>
-		<p>
-			<img src="critic.gif" alt="Critic" />
-			NAME <br />
-			PUBLICATION
+		<p class="author">
+			<img src="supplement/critic.gif" alt="Critic" />
+			Josiah Parry <br />
+			R U Srs Review
 		</p>
+	</span>
 
+
+	</div>
+	<div id="index">
 		<p>(1-10) of 88</p>
+	</div>
+	</div>
 
-		<div>
-			<a href="https://webster.cs.washington.edu/validate-html.php"><img src="http://webster.cs.washington.edu/w3c-html.png" alt="Valid HTML5" /></a> <br />
+	<div id="validators">
+			<a href="https://webster.cs.washington.edu/validate-html.php"><img src="http://webster.cs.washington.edu/w3c-html.png" alt="Valid HTML5" /></a>
+			<br/> <br />
 			<a href="https://webster.cs.washington.edu/validate-css.php"><img src="http://webster.cs.washington.edu/w3c-css.png" alt="Valid CSS" /></a>
 		</div>
 	</body>
