--- a/php_server_side/movie.css
+++ b/php_server_side/movie.css
@@ -1,5 +1,5 @@
 body {
-	background: url('background.png');
+	background: url('hw3-completed/background.png');
 	font-size: 8pt;
 	font-family: Verdana, Tahoma, sans-serif;
 	margin: 0;
@@ -8,7 +8,7 @@ body {
 
 #image-banner {
 	text-align: center;
-	background: url('bannerbg.png');
+	background: url('hw3-completed/bannerbg.png');
 	background-repeat: repeat-x;
 	height: 50px;
 }
@@ -62,7 +62,7 @@ h1 {
 }
 
 #reviews-header {
-	background: url('rbg.png');
+	background: url('hw3-completed/rbg.png');
 	height: 83px;
 	font-size: 48pt;
 	font-weight: bold;
